Simplify and optimise warm stats
Signed-off-by: Bukhtawar Khan <bukhtawa@amazon.com>